<resources>
    <string name="app_name">BitCoupon</string>

    <!--Code-->
    <string name="currency">KM</string>
    <string name="transactionID">Transaction ID: </string>
    <string name="quantity">Quantity: </string>
    <string name="total_price">Total price: </string>
    <string name="token">Token: </string>
    <string name="transaction_date">Transaction Date: </string>
    <string name="price">Price: </string>
    <string name="coupon_offer">Coupon Offer</string>
    <string name="description">Description</string>
    <string name="remark">Remark</string>
    <string name="detailed_description">Detailed Description</string>
    <string name="category_name">Category Name</string>
    <string name="coupons_left">Coupons left to reach the offer goal: </string>
    <string name="maximal_coupons">Maximal order of Coupons: </string>
    <string name="seller">Seller of Coupon: </string>


    <!-- hints -->
    <string name="hint_email">Your email</string>
    <string name="hint_password">Your password</string>
    <string name="hint_filter">Search</string>

    <!-- button -->
    <string name="button_login">Login</string>
    <string name="continue_without_logging">Continue without logging in</string>

    <!-- keys -->
    <string name="key_user_email">bitcamp.benjamin.service.user_email</string>
    <string name="key_user_password">bitcamp.benjamin.service.user_password</string>

    <!-- Toast -->
    <string name="toast_try_again">Something went wrong! Try again</string>

    <string name="title_activity_posts">PostsActivity</string>

    <string name="hello_world">Hello world!</string>

    <!-- Menu -->
    <string name="action_logout">Logout</string>
    <string name="action_profile">Profile</string>
    <string name="User_Id">User ID: </string>
    <string name="Usernema">Name: </string>
    <string name="user_surname">Surname: </string>
    <string name="user_email">Email: </string>
    <string name="user_adress">Address: </string>
    <string name="user_city">City: </string>
    <string name="button_user_coupons">My coupons</string>


    <string name="name_of_company">Name of Company: </string>
    <string name="company_email">Email: </string>
    <string name="company_address">Address: </string>
    <string name="company_city">City: </string>
    <string name="company_contact">Contact: </string>

    <string name="button_back">Back</string>
    <string name="button_companies">Companies</string>
    <string name="button_coupon">Coupons</string>


    <string name="action_settings">Settings</string>
    <string name="title_activity_company">Company</string>
    <string name="title_activity_coupon">Coupons</string>
    <string name="title_activity_single_bought_coupon">Bought Coupon</string>
    <string name="title_activity_single_company">Company</string>
    <string name="title_activity_single_coupon">Coupon</string>
    <string name="title_activity_user_coupons">User Coupons</string>
    <string name="title_activity_user_profile">User Profile</string>
    <string name="action_login">Login</string>
    <string name="action_companies">Companies</string>
    <string name="action_coupons">Coupons</string>

<!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="buy_button">Buy Coupon</string>

    <string name="title_activity_pay_pal">Buy Coupon</string>
    <string name="expireDate">Date of Expire: </string>
    <string name="name_of_category">Category Name: </string>


    <string name="title_activity_update_user_profile">Update Profile</string>
    <string name="textView_updateProfil_username">New username</string>
    <string name="textView_updateProfile_view">Update profile</string>
    <string name="textView_updateProfil_surname">Surname: </string>
    <string name="textView_updateProfil_dob">Date: </string>
    <string name="button_updateUserProfile_save">Save</string>
    <string name="title_activity_user_settings">UserSettingsActivity</string>
    <string name="ticker">New Coupons !</string>
    <string name="titleofnotification">New Coupons!</string>
    <string name="contentofnotification">We add new coupons , since your last visit</string>

</resources>
