



<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:tools="http://schemas.android.com/tools"
            android:id="@+id/scroll"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fillViewport="true"
            android:stackFromBottom="true"
            android:transcriptMode="alwaysScroll"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:paddingRight="@dimen/activity_horizontal_margin"
            android:paddingTop="@dimen/activity_vertical_margin"
            android:paddingBottom="@dimen/activity_vertical_margin"
            tools:context=".MainActivity">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:background="@color/switch_thumb_normal_material_light"
        android:weightSum="1">


    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/imageView"
        android:src="@drawable/logo"
        android:baselineAlignBottom="false"
        android:cropToPadding="false"
        android:layout_marginBottom="88dp"/>

        <EditText
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:hint="@string/hint_email"
        android:id="@+id/edit_text_email"
        android:padding="20dp"
        android:inputType="textEmailAddress"
            />

        <EditText
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:hint="@string/hint_password"
        android:id="@+id/edit_text_password"
        android:padding="20dp"
        android:inputType="textPassword"/>
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:orientation="vertical"
            android:background="@color/switch_thumb_normal_material_light"
            android:weightSum="1"
            android:layout_weight="0.07">
        <Button
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/button_login"
            android:background="#FE980F"
            android:textColor="#fffffff8"
            android:padding="15dp"
            android:id="@+id/button_login"
            android:layout_centerVertical="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"/>

        </RelativeLayout>

        <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/button_continue_without_logging"
        android:background="#FE980F"
        android:textColor="#fffffff8"
        android:padding="15dp"
        android:text="@string/continue_without_logging"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
            />
    </LinearLayout>

</LinearLayout>