<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:tools="http://schemas.android.com/tools"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:paddingLeft="@dimen/activity_horizontal_margin"
                android:paddingRight="@dimen/activity_horizontal_margin"
                android:paddingTop="@dimen/activity_vertical_margin"
                android:paddingBottom="@dimen/activity_vertical_margin"
                android:orientation="vertical"
                tools:context="com.project.bitcoupon.bitcoupon.controllers.UpdateUserProfileActivity"
                android:weightSum="1">



    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/textView_updateProfile_view"
        android:backgroundTint="#F0F0E9"
        android:background="#F0F0E9"
        android:textColor="#428BCA"
        android:gravity="center"
        android:paddingBottom="5dp"/>

    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="379dp"
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_weight="0.93">

        <LinearLayout
            android:layout_height="wrap_content"
            android:layout_width="fill_parent"
            android:orientation="vertical">

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/textView_updateProfil_username"
                android:id="@+id/textView_updateProfil_username"/>

            <EditText
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:id="@+id/editText_updateProfile_username"/>

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/textView_updateProfil_surname"
                android:id="@+id/textView_updateProfil_surname"/>

            <EditText
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:id="@+id/editText_updateProfile_surname"/>


            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="City"
                android:id="@+id/textView5"/>

            <EditText
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:id="@+id/editText_updateProfile_city"/>

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="Address"
                android:id="@+id/textView_updateProfil_address"/>

            <EditText
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:id="@+id/editText_updateProfile_address"/>


        </LinearLayout>
    </ScrollView>

    <Button
        android:layout_width="354dp"
        android:layout_height="wrap_content"
        android:textColor="#ffffff"
        android:backgroundTint="#FE9F20"
        android:background="#FE9F20"
        android:gravity="center"
        android:layout_gravity="center"
        android:textAlignment="center"
        android:text="@string/button_updateUserProfile_save"
        android:id="@+id/button_updateUserProfile_save"/>

</LinearLayout>
